fix: auto fit ui on mobile

--- a/dapps/etc-espace/src/modules/index.css
+++ b/dapps/etc-espace/src/modules/index.css
@@ -1,5 +1,5 @@
 .bsc-espace-module {
-    @apply absolute w-[480px] px-[24px] pt-[24px] pb-[32px] rounded-[16px] bg-white will-change-transform;
+    /* @apply absolute px-[24px] pt-[24px] pb-[32px] rounded-[16px] bg-white will-change-transform; */
 
     box-shadow: 0 8px 16px rgba(164 170 216 / 8%);
     backface-visibility: visible;
